Lifestyle Based Recommendation/force-app/main/default/objects/Interaction__c/Interaction__c.object-meta.xml
<CustomObject>
    <description>Store Equiry details</description>
    <label>Interaction</label>
    <nameField>
        <label>Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>