Lifestyle Based Recommendation/force-app/main/default/objects/Interaction__c/fields/Activity_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Activity_DateTime__c</fullName>
    <label>Activity DateTime</label>
    <type>DateTime</type>
</CustomField>