Lifestyle Based Recommendation/force-app/main/default/objects/Interaction__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <formula>Lead__r.Id&amp;&apos;_&apos;&amp; Site__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalKey</label>
    <type>Text</type>
</CustomField>