Lifestyle Based Recommendation/force-app/main/default/objects/Interaction__c/fields/Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary__c</fullName>
    <label>Interaction Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>